feat: list diagrams API

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SupabaseDb": "Host=127.0.0.1;Port=54322;Database=postgres;Username=postgres;Password=postgres"
   }
 }
