--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,13 @@
+# Top-level EditorConfig
+root = true
+
+[*]
+end_of_line = lf
+charset = utf-8
+insert_final_newline = true
+indent_style = space
+indent_size = 2
+
 # Styl C#
 [*.cs]
 
