--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.1.2",
-    "@supabase/supabase-js": "^2.75.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
@@ -26,9 +27,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
-    "react-hook-form": "^7.54.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.13",
