--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,12 @@ pnpm-debug.log*
 # jetbrains setting folder
 .idea/
 
+# test coverage
+coverage/
+test-results/
+playwright-report/
+backend-coverage/
+
 # .NET backend
 bin/
 obj/
