--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -48,7 +48,9 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          npm install --no-save --force @rollup/rollup-linux-x64-gnu
 
       - name: Run unit tests with coverage
         run: npm run test:coverage
@@ -133,7 +135,9 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          npm install --no-save --force @rollup/rollup-linux-x64-gnu
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
