--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-PUBLIC_SUPABASE_URL=###
-PUBLIC_SUPABASE_KEY=###
+# Frontend - Supabase Auth (PUBLIC_ prefix required for Astro/Vite)
+# Frontend ONLY uses Supabase for authentication, not database access
+PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+PUBLIC_SUPABASE_KEY=your-anon-key-here
+
+# Backend - PostgreSQL Connection String
+# Backend connects directly to Supabase PostgreSQL database
+SUPABASE_CONNECTION_STRING=Host=db.your-project.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=your-password
+
+# Note: Never commit the .env file with real credentials to version control
