--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,11 @@ PUBLIC_SUPABASE_KEY=your-anon-key-here
 # Backend connects directly to Supabase PostgreSQL database
 SUPABASE_CONNECTION_STRING=Host=db.your-project.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=your-password
 
+# Backend - JWT Configuration
+# Get JWT_SECRET from Supabase Dashboard -> Project Settings -> API -> JWT Secret
+JWT_SECRET=your-jwt-secret-from-supabase-dashboard
+JWT_ISSUER=https://your-project.supabase.co/auth/v1
+JWT_AUDIENCE=authenticated
+
 # Note: Never commit the .env file with real credentials to version control
+```
