--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -2,10 +2,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.AspNetCore.Authentication": "Debug"
     }
   },
   "ConnectionStrings": {
     "SupabaseDb": "Host=127.0.0.1;Port=54322;Database=postgres;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Secret": "super-secret-jwt-token-with-at-least-32-characters-long",
+    "Issuer": "supabase-demo",
+    "Audience": "authenticated"
   }
 }
