chore: enhance docker.example

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -13,4 +13,13 @@ PUBLIC_SUPABASE_KEY=your-supabase-anon-key-here
 
 # Backend - PostgreSQL Connection String
 # Backend connects directly to Supabase PostgreSQL database
+# Get this from: https://supabase.com/dashboard/project/.../settings/database
+# Use the "Connection String" in the format: Host=...;Port=...;Database=postgres;Username=postgres;Password=...
 SUPABASE_CONNECTION_STRING=Host=host.docker.internal;Port=54322;Database=postgres;Username=postgres;Password=your-postgres-password
+
+# Backend - JWT Configuration
+# Get JWT Secret from: https://supabase.com/dashboard/project/.../settings/api
+# Look for "JWT Secret" in the API settings
+Jwt__Secret=your-jwt-secret-here
+Jwt__Issuer=https://....supabase.co/auth/v1
+Jwt__Audience=authenticated
