feat: add CI/CD pipeline

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -7,7 +7,9 @@
     }
   },
   "ConnectionStrings": {
-    "SupabaseDb": "Host=127.0.0.1;Port=54322;Database=postgres;Username=postgres;Password=postgres"
+    "SupabaseDbLOCAL": "Host=127.0.0.1;Port=54322;Database=postgres;Username=postgres;Password=postgres",
+    "SupabaseDbHOSTED": "Host=aws-1-eu-central-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.htxfsiqfmtzgrcxwoxco;Password=yZDiFCR0QFUyQUMZ",
+    "SupabaseDb": "Host=aws-1-eu-central-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.htxfsiqfmtzgrcxwoxco;Password=yZDiFCR0QFUyQUMZ"
   },
   "Jwt": {
     "Secret": "super-secret-jwt-token-with-at-least-32-characters-long",
