--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "ConnectionStrings": {
     "SupabaseDbLOCAL": "Host=127.0.0.1;Port=54322;Database=postgres;Username=postgres;Password=postgres",
-    "SupabaseDb": "Host=aws-1-eu-central-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.htxfsiqfmtzgrcxwoxco;Password=yZDiFCR0QFUyQUMZ"
+    "SupabaseDb": "Host=127.0.0.1;Port=54322;Database=postgres;Username=postgres;Password=postgres"
   },
   "Jwt": {
     "Secret": "super-secret-jwt-token-with-at-least-32-characters-long",
